--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -4,6 +4,9 @@
 
 html {
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 62.5%;
 }
 
 a {
@@ -14,6 +17,7 @@ a {
 body {
   background-color: #f5f5f5;
   font-family: $font-primary;
+  font-size: 1.6rem;
   margin: 0;
   padding: 0;
 
