--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -6,14 +6,14 @@
   width: fit-content;
   font-size: 16px;
   font-weight: bold;
-  padding: 12px 20px;
+  padding: 1.2rem 2rem;
   text-decoration: none;
   color: $color-white;
   cursor: pointer;
   transition: all 300ms;
 
   &:hover {
-    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1rem 1rem -1rem rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -23,9 +23,9 @@ a {
   color: $color-white;
   cursor: pointer;
   font-family: $font-primary;
-  font-size: 14px;
+  font-size: 1.4rem;
   white-space: nowrap;
-  max-width: 210px;
+  max-width: 21rem;
   text-decoration: none;
 
   &.yellow {
@@ -38,11 +38,11 @@ a {
   max-width: 100%;
 
   @include breakpoint($sm) {
-    max-width: 745px;
+    max-width: 74.5rem;
   }
 
   @include breakpoint($md) {
-    max-width: 920px;
+    max-width: 92rem;
   }
 
   @include breakpoint($lg) {
@@ -55,10 +55,10 @@ a {
 }
 
 .has-shadow {
-  border: 1px solid rgba(239, 238, 238, 1);
-  box-shadow: 0 2px 4px rgba(174, 190, 205, 0.3);
-  padding: 20px;
-  border-radius: 6px;
+  border: .1rem solid rgba(239, 238, 238, 1);
+  box-shadow: 0 .2rem .4rem rgba(174, 190, 205, 0.3);
+  padding: 2rem;
+  border-radius: .6rem;
   background-color: $color-white;
 
   // @media (prefers-color-scheme: dark) {
