--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-blue-dark;
-  padding: 50px 20px;
+  padding: 5rem 2rem;
 
   p {
     color: $color-white;
@@ -10,12 +10,12 @@
   &__social {
     display: flex;
     justify-content: space-between;
-    max-width: 250px;
-    margin: 30px auto;
+    max-width: 25rem;
+    margin: 3rem auto;
 
     .icon {
       color: $color-white;
-      font-size: 32px;
+      font-size: 3.2rem;
     }
   }
 }
