--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./base/variables";
 @import "./base/mixins";
 @import "./base/base";
+@import "./base/fonts";
 @import "./base/animations";
 @import "./base/globals";
 @import "./components/nav";
@@ -8,3 +9,4 @@
 @import "./components/footer";
 @import "./components/course-card";
 @import "./components/recommended-courses";
+@import "./components/join-us";
