--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,3 +10,6 @@
 @import "./components/course-card";
 @import "./components/recommended-courses";
 @import "./components/join-us";
+@import "./components/group";
+@import "./components/hero";
+@import "./components/category-filter";
