added new structure

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,3 +13,7 @@
 @import "./components/group";
 @import "./components/hero";
 @import "./components/category-filter";
+@import "./components/lesson";
+
+//Containers
+@import "./containers/lessons";
