--- a/styles/components/_group.scss
+++ b/styles/components/_group.scss
@@ -26,17 +26,9 @@
       width: 35%;
       padding: 20px 0;
       height: 105px;
-  
-      @include breakpoint($sm) {
-        display: flex;
-        align-items: center;
-      }
-  
-      img {
-        max-width: 50px;
-        display: block;
-        margin: 0 auto;
-      }
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   
     &__description {
