added firebase integration

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,7 @@
 @import "./components/hero";
 @import "./components/category-filter";
 @import "./components/lesson";
+@import "./components/lesson_video";
 
 //Containers
 @import "./containers/lessons";
