feat(Membership & Resource): add styles

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,6 +15,8 @@
 @import "./components/category-filter";
 @import "./components/lesson";
 @import "./components/lesson_video";
+@import "./components/membership";
+@import "./components/lesson-resource";
 
 //Containers
 @import "./containers/lessons";
