--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,5 +18,6 @@
 @import "./components/membership";
 @import "./components/lesson-resource";
 
-//Containers
+//Pages
 @import "./containers/lessons";
+@import "./pages/login";
