--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -93,3 +93,14 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+button {
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  white-space: nowrap;
+  max-width: 210px;
+  text-decoration: none;
+}
