feat(Lesson): add questions and comments

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,6 +17,7 @@
 @import "./components/lesson_video";
 @import "./components/membership";
 @import "./components/lesson-resource";
+@import "./components/question";
 
 //Pages
 @import "./containers/lessons";
