--- a/styles/components/_lesson_video.scss
+++ b/styles/components/_lesson_video.scss
@@ -27,6 +27,18 @@
       margin-bottom: 20px;
       max-width: 600px;
       line-height: 22px;
+      text-align: justify;
+
+      @include breakpoint($lg) {
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+        max-width: 90%;
+      }
+
+      a {
+        color: #27ae60;
+        font-size: 1.8rem;
+      }
     }
   }
 
