feat(Fonts): updated new font family

--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -69,3 +69,9 @@
 .icon-github:before {
   content: "\eab0";
 }
+.icon-comment:before {
+  content: "\e904";
+}
+.icon-like:before {
+  content: "\e903";
+}
