--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -55,13 +55,19 @@ a {
 }
 
 .has-shadow {
-  border: .1rem solid rgba(239, 238, 238, 1);
-  box-shadow: 0 .2rem .4rem rgba(174, 190, 205, 0.3);
+  border: 0.1rem solid rgba(239, 238, 238, 1);
+  box-shadow: 0 0.2rem 0.4rem rgba(174, 190, 205, 0.3);
   padding: 2rem;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
   background-color: $color-white;
 
   // @media (prefers-color-scheme: dark) {
   //   background-color: rgb(24, 26, 27);
   // }
+}
+
+.error {
+  color: #e74c3c;
+  margin-bottom: 10px;
+  width: 100%;
 }
